XuiMod: Toast Animations [2/2]
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/toast_animation.xml
+++ b/res/xml/toast_animation.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ListPreference
+        android:key="toast_animation"
+        android:title="@string/toast_animation_title"
+        android:entries="@array/toast_animation_entries"
+        android:entryValues="@array/toast_animation_values"
+        android:persistent="false" />
 
 </PreferenceScreen>
