--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -62,6 +62,13 @@
             android:key="wallpaper_intra_close"
             android:title="@string/wallpaper_intra_close_title" />
 
+        <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:persistent="false" />
+
         <SwitchPreference
             android:key="animation_no_override"
             android:title="@string/title_animation_no_override"
