--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -44,6 +44,14 @@
         android:entryValues="@array/status_bar_quick_qs_pulldown_values"
         android:defaultValue="0" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="smart_pulldown"
+        android:title="@string/smart_pulldown_title"
+        android:summary="%s"
+        android:entries="@array/smart_pulldown_entries"
+        android:entryValues="@array/smart_pulldown_values"
+        android:persistent="false" />
+
     </PreferenceCategory>
 
     <!-- QS clock -->
