--- a/res/xml/statusbar_gestures.xml
+++ b/res/xml/statusbar_gestures.xml
@@ -25,4 +25,10 @@
         android:summary="@string/double_tap_to_sleep_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="status_bar_notif_count"
+        android:title="@string/status_bar_notif_count_title"
+        android:summary="@string/status_bar_notif_count_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
