--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -327,4 +327,18 @@
         <item>1200000</item>
     </string-array>
 
+    <!-- Power Menu -->
+    <string-array name="power_menu_actions_array" translatable="false">
+        <item>power</item>
+        <item>reboot</item>
+        <item>screenshot</item>
+        <item>airplane</item>
+        <item>users</item>
+        <item>settings</item>
+        <item>lockdown</item>
+        <item>assist</item>
+        <item>voiceassist</item>
+        <item>silent</item>
+    </string-array>
+
 </resources>
