--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -18,4 +18,10 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/qs_advanced_title">
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
+
 </PreferenceScreen>
