QuickSettings: Add Haptic Feedback to tiles [2/2]
Change-Id: I2122d45b581f4ed45859c34c0ac4b12bb3bc66dd
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -98,4 +98,10 @@
             android:entries="@array/entries_scrollingcache"
             android:entryValues="@array/values_scrollingcache" />
 
+        <com.bliss.support.preferences.SecureSettingSwitchPreference
+            android:key="quick_settings_vibrate"
+            android:title="@string/quick_settings_vibrate_title"
+            android:summary="@string/quick_settings_vibrate_summary"
+            android:defaultValue="false"/>
+
 </PreferenceScreen>
