--- a/res/xml/statusbar_logo.xml
+++ b/res/xml/statusbar_logo.xml
@@ -18,4 +18,11 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/statusbar_bliss_logo">
 
+    <!-- Status bar Bliss logo -->
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="status_bar_bliss_logo"
+        android:title="@string/statusbar_bliss_logo"
+        android:summary="@string/status_bar_bliss_logo_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
