--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -46,4 +46,9 @@
         <attr name="pstsTextSelectedAlpha" format="float" />
     </declare-styleable>
 
+    <!-- Value to pass to callback when restore button is pressed -->
+    <declare-styleable name="ColorPreference">
+        <attr name="defaultColorValue" format="integer" />
+    </declare-styleable>
+
 </resources>
