Settings: Double Tap status bar to sleep (1/2)
Change-Id: I8da30246d6ab776aea64e696d1dd8d35b361c89f
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/statusbar_gestures.xml
+++ b/res/xml/statusbar_gestures.xml
@@ -19,4 +19,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/statusbar_gestures_title">
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_to_sleep_title"
+        android:summary="@string/double_tap_to_sleep_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
