--- a/res/xml/lockscreen_tweaks.xml
+++ b/res/xml/lockscreen_tweaks.xml
@@ -50,4 +50,10 @@
             android:title="@string/hide_lockscreen_alarm_title"
             android:defaultValue="true" />
 
+     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/media_art_title"
+            android:summary="@string/media_art_summary"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
