--- a/res/xml/clock_tab.xml
+++ b/res/xml/clock_tab.xml
@@ -18,4 +18,18 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/clock_tab_title">
 
+    <ListPreference
+       android:key="status_bar_clock"
+       android:title="@string/status_bar_clock_style_title"
+       android:dialogTitle="@string/status_bar_clock_style_title"
+       android:entries="@array/status_bar_clock_style_entries"
+       android:entryValues="@array/status_bar_clock_style_values" />
+
+    <ListPreference
+       android:key="status_bar_am_pm"
+       android:title="@string/status_bar_am_pm_title"
+       android:dialogTitle="@string/status_bar_am_pm_title"
+       android:entries="@array/status_bar_am_pm_entries"
+       android:entryValues="@array/status_bar_am_pm_values" />
+
 </PreferenceScreen>
