Notification Count in Statusbar [2/2]
Change-Id: I55f09dc8c7ac003a69f75cac502d01e1ad44190e

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -52,5 +52,5 @@
     <!-- Colors of the help screen -->
     <color name="color_picker_help_screen_background">#e0000000</color>
     <color name="color_picker_help_summary_text_color">#b3ffffff</color>
-
+    <color name="icon_tint_color">@color/material_blue_500</color>
 </resources>
