Add option to disable scrolling cache [1/2]
Signed-off-by: Jackeagle <jackeagle102@gmail.com>
Change-Id: I0c61790cd41a668187eaf3ceba57a7f3e642eec7

--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -106,6 +106,14 @@
             android:title="@string/title_animation_no_override"
             android:summary="@string/summary_animation_no_override" />
 
+        <ListPreference
+            android:key="pref_scrollingcache"
+            android:dialogTitle="@string/pref_scrollingcache_title"
+            android:title="@string/pref_scrollingcache_title"
+            android:summary="@string/pref_scrollingcache_summary"
+            android:entries="@array/entries_scrollingcache"
+            android:entryValues="@array/values_scrollingcache" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
