--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -90,4 +90,12 @@
             android:title="@string/title_animation_no_override"
             android:summary="@string/summary_animation_no_override" />
 
+        <ListPreference
+            android:key="pref_scrollingcache"
+            android:dialogTitle="@string/pref_scrollingcache_title"
+            android:title="@string/pref_scrollingcache_title"
+            android:summary="@string/pref_scrollingcache_summary"
+            android:entries="@array/entries_scrollingcache"
+            android:entryValues="@array/values_scrollingcache" />
+
 </PreferenceScreen>
