Blissify: Add Screen Record to the Power Menu [2/2] PureNexus Edits: *adapted to work with our custom powermenu option
Change-Id: Id4c80805d512f8973f15a554cef8889abb4c0a3d

--- a/res/xml/power_menu.xml
+++ b/res/xml/power_menu.xml
@@ -25,12 +25,17 @@
     <SwitchPreference
         android:key="screenshot"
         android:title="@string/power_menu_screenshot_title"
+        android:defaultValue="true" />
+
+    <SwitchPreference
+        android:key="screenrecord"
+        android:title="@string/power_menu_screenrecord_title"
         android:defaultValue="false" />
 
     <SwitchPreference
         android:key="airplane"
         android:title="@string/power_menu_airplane_title"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <SwitchPreference
         android:key="users"
@@ -65,6 +70,6 @@
     <SwitchPreference
         android:key="silent"
         android:title="@string/power_menu_sound_title"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
 </PreferenceScreen>
