--- a/res/xml/advanced_settings.xml
+++ b/res/xml/advanced_settings.xml
@@ -22,4 +22,10 @@
         android:summary="@string/screenshot_sound_summary"
         android:defaultValue="true" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="three_finger_gesture"
+        android:title="@string/three_finger_gesture"
+        android:summary="@string/three_finger_gesture_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
