--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -793,6 +793,7 @@
         <item>@string/power_menu_animation_aosp</item>
         <item>@string/power_menu_animation_bottom</item>
         <item>@string/power_menu_animation_top</item>
+        <item>@string/power_menu_animation_rotate</item>
         <item>@string/power_menu_animation_xylon</item>
         <item>@string/power_menu_animation_slide</item>
         <item>@string/power_menu_animation_turn</item>
@@ -813,6 +814,7 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+        <item>10</item>
 </string-array>
 
 </resources>
