--- a/res/xml/lockscreen_gestures.xml
+++ b/res/xml/lockscreen_gestures.xml
@@ -32,4 +32,10 @@
             android:summary="@string/keyguard_torch_summary"
             android:defaultValue="false" />
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="status_bar_locked_on_secure_keyguard"
+            android:title="@string/block_on_secure_keyguard_title"
+            android:summary="@string/block_on_secure_keyguard_summary"
+            android:defaultValue="false"/>
+
 </PreferenceScreen>
