--- a/res/xml/lockscreen_tweaks.xml
+++ b/res/xml/lockscreen_tweaks.xml
@@ -45,4 +45,9 @@
          android:title="@string/hide_lockscreen_date_title"
          android:defaultValue="true" />
 
+     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="hide_lockscreen_alarm"
+            android:title="@string/hide_lockscreen_alarm_title"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
