--- a/res/xml/nav_button.xml
+++ b/res/xml/nav_button.xml
@@ -23,6 +23,12 @@
         android:title="@string/hardware_keys_back_key_title" >
 
         <com.blissroms.blissify.button.tabs.ActionPreference
+            android:key="hwkeys_button_back_single_tap"
+            android:summary="@string/hardware_keys_single_tap_summary"
+            android:title="@string/hardware_keys_single_tap_title" >
+        </com.blissroms.blissify.button.tabs.ActionPreference>
+
+        <com.blissroms.blissify.button.tabs.ActionPreference
             android:key="hwkeys_button_back_long_press"
             android:summary="@string/hardware_keys_long_press_summary"
             android:title="@string/hardware_keys_long_press_title" >
@@ -39,6 +45,12 @@
     <PreferenceCategory
         android:key="home_key"
         android:title="@string/hardware_keys_home_key_title" >
+
+        <com.blissroms.blissify.button.tabs.ActionPreference
+            android:key="hwkeys_button_home_single_tap"
+            android:summary="@string/hardware_keys_single_tap_summary"
+            android:title="@string/hardware_keys_single_tap_title" >
+        </com.blissroms.blissify.button.tabs.ActionPreference>
 
         <com.blissroms.blissify.button.tabs.ActionPreference
             android:key="hwkeys_button_home_long_press"
