--- a/res/xml/lockscreen_tweaks.xml
+++ b/res/xml/lockscreen_tweaks.xml
@@ -36,24 +36,34 @@
         android:title="@string/hide_lockscreen_items_title" />
 
      <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-         android:key="hide_lockscreen_clock"
+         android:key="show_lockscreen_clock"
          android:title="@string/hide_lockscreen_clock_title"
          android:defaultValue="true" />
 
+      <ListPreference
+         android:key="lock_clock_fonts"
+         android:title="@string/lock_clock_font_title"
+         android:dialogTitle="@string/lock_clock_font_title"
+         android:entries="@array/lock_clock_fonts_entries"
+         android:entryValues="@array/lock_clock_fonts_values"
+         android:summary="@string/lock_clock_font_summary"
+         android:dependency="show_lockscreen_clock"
+         android:persistent="false" />
+
      <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-         android:key="hide_lockscreen_date"
+         android:key="show_lockscreen_date"
          android:title="@string/hide_lockscreen_date_title"
          android:defaultValue="true" />
 
      <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-            android:key="hide_lockscreen_alarm"
-            android:title="@string/hide_lockscreen_alarm_title"
-            android:defaultValue="true" />
+         android:key="show_lockscreen_alarm"
+         android:title="@string/hide_lockscreen_alarm_title"
+         android:defaultValue="true" />
 
      <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-            android:key="lockscreen_media_metadata"
-            android:title="@string/media_art_title"
-            android:summary="@string/media_art_summary"
-            android:defaultValue="true" />
+         android:key="lockscreen_media_metadata"
+         android:title="@string/media_art_title"
+         android:summary="@string/media_art_summary"
+         android:defaultValue="true" />
 
 </PreferenceScreen>
