--- a/res/xml/touch_gestures_tab.xml
+++ b/res/xml/touch_gestures_tab.xml
@@ -17,22 +17,6 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/blissify_title">
-
-    <PreferenceScreen
-       android:key="statusbar_settings"
-       android:fragment="com.blissroms.blissify.statusbar.StatusBarSettings"
-       android:title="@string/statusbar_settings_title" 
-       android:icon="@drawable/ic_bliss_statusbar" />
-
-    <PreferenceScreen
-       android:key="animations_settings"
-       android:fragment="com.blissroms.blissify.animations.AnimationsSettings"
-       android:title="@string/animations_settings_title" />
-
-    <PreferenceScreen
-       android:key="gestures_settings"
-       android:fragment="com.blissroms.blissify.gestures.GestureSettings"
-       android:title="@string/gestures_settings_title" />
+    android:title="@string/touch_gestures_tab_title">
 
 </PreferenceScreen>
