--- a/res/xml/statusbar_gestures.xml
+++ b/res/xml/statusbar_gestures.xml
@@ -17,22 +17,6 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/blissify_title">
-
-    <PreferenceScreen
-       android:key="statusbar_settings"
-       android:fragment="com.blissroms.blissify.statusbar.StatusBarSettings"
-       android:title="@string/statusbar_settings_title" 
-       android:icon="@drawable/ic_bliss_statusbar" />
-
-    <PreferenceScreen
-       android:key="quick_settings"
-       android:fragment="com.blissroms.blissify.quicksettings.QuickSettings"
-       android:title="@string/quick_settings_title" />
-
-    <PreferenceScreen
-       android:key="notification_settings"
-       android:fragment="com.blissroms.blissify.notification.NotificationSettings"
-       android:title="@string/notification_settings_title" />
+    android:title="@string/statusbar_gestures_title">
 
 </PreferenceScreen>
