--- a/res/xml/nav_button.xml
+++ b/res/xml/nav_button.xml
@@ -19,6 +19,15 @@
         android:title="@string/nav_button_title">
 
 <PreferenceCategory
+        android:key="hardware_keys"
+        android:title="@string/hardware_keys_category" >
+
+        <SwitchPreference
+            android:key="hardware_keys_disable"
+            android:title="@string/hardware_keys_disable_title" />
+</PreferenceCategory>
+
+<PreferenceCategory
         android:key="back_key"
         android:title="@string/hardware_keys_back_key_title" >
 
