--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -61,4 +61,10 @@
        android:title="@string/animation_settings_title"
        android:icon="@drawable/ic_bliss_animation" />
 
+    <PreferenceScreen
+       android:key="recents_settings"
+       android:fragment="com.blissroms.blissify.recents.RecentsSettings"
+       android:title="@string/recents_settings_title"
+       android:icon="@drawable/ic_bliss_recents" />
+
 </PreferenceScreen>
