--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -36,6 +36,11 @@
        android:title="@string/notification_settings_title" />
 
     <PreferenceScreen
+       android:key="lockscreen_settings"
+       android:fragment="com.blissroms.blissify.lockscreen.LockscreenSettings"
+       android:title="@string/lockscreen_settings_title" />
+
+    <PreferenceScreen
        android:key="buttons_settings"
        android:fragment="com.blissroms.blissify.buttons.ButtonSettings"
        android:title="@string/buttons_settings_title" />
