Blissify: Update PagerSlidingTabStrip - Material Design - Big thanks to jpardogo!
Change-Id: I4c77c603d44b21edb5293f70274800e55aab508b
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/layout/blissify_ui.xml
+++ b/res/layout/blissify_ui.xml
@@ -24,6 +24,7 @@
     <com.blissroms.blissify.PagerSlidingTabStrip
         android:id="@+id/tabs"
         android:layout_width="match_parent"
+        android:background="@color/bliss_tab_color"
         android:layout_height="48dp" />
 
     <android.support.v4.view.ViewPager
