--- a/res/layout/tab.xml
+++ b/res/layout/tab.xml
@@ -19,4 +19,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:singleLine="true" />
+    android:maxLines="1" />
