--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -53,4 +53,10 @@
     <color name="color_picker_help_screen_background">#e0000000</color>
     <color name="color_picker_help_summary_text_color">#b3ffffff</color>
     <color name="icon_tint_color">@color/material_blue_500</color>
+    
+    <!-- Colors for Blissify -->
+    <color name="bliss_accent">#ff4285f4</color>
+    <color name="bliss_tab_text_color">#ffffffff</color>
+    <color name="bliss_tab_color">#ff263238</color>
+    
 </resources>
