--- a/res/xml/quick_pulldown.xml
+++ b/res/xml/quick_pulldown.xml
@@ -13,21 +13,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/blissify_title">
-
-    <PreferenceScreen
-       android:key="statusbar_settings"
-       android:fragment="com.blissroms.blissify.statusbar.StatusBarSettings"
-       android:title="@string/statusbar_settings_title" 
-       android:icon="@drawable/ic_bliss_statusbar" />
-
-    <PreferenceScreen
-       android:key="quick_settings"
-       android:fragment="com.blissroms.blissify.quicksettings.QuickSettings"
-       android:title="@string/quick_settings_title" />
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+        android:title="@string/quick_pulldown_title">
 
 </PreferenceScreen>
