Blissify: Include color picker:
This color picker (and - preference) is based on the color picker (and - preference) by
Daniel Nilsson and Sergey Margaritov, with some additions by SlimRoms.

color-picker-view by Daniel Nilsson:
https://github.com/danielnilsson9/color-picker-view/tree/master/color-picker-view/src/main/java/com/github/danielnilsson9/colorpickerview

android-ColorPickerPreference by Sergey Margaritov:
https://github.com/attenzione/android-ColorPickerPreference

DarkKat additions/changes:
Include color picker:
https://github.com/XXMrHyde/android_packages_apps_Settings/commit/a172b41db57950e78146ec9b16a8fee81f3ba71c

Color picker: Respect current theme and clean up:
https://github.com/XXMrHyde/android_packages_apps_Settings/commit/679bf2723fc341b5d11ec0b101faae27388d5bd1

- Change package to net.bliss.colorpicker...
  (See copyright information in java classes for original author and contributors)
- Organize java classes in seperate folders, (drawable, fragment, preference, ...)
- Temporary merged needed helper methods into new ColorPickerHelper class
- Changes for Android 7.0:
  - ColorPickerPreference:
    - Extends Preference from Android Support Library
  - ColorPickerPreference/ColorPickerFragment:
    - Remove SharedPreferences fallback options for old ColorPicker implementation
      (this isn`t needed for Android 7.0)

Change-Id: I0c4082332464856864435fda0bb8a10ba661ae52

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -51,4 +51,14 @@
         <attr name="defaultColorValue" format="integer" />
     </declare-styleable>
 
+    <!-- Color picker preference -->
+    <declare-styleable name="ColorPickerPreference">
+        <attr name="defaultColor" format="color" />
+        <attr name="resetColor1" format="color" />
+        <attr name="resetColor2" format="color" />
+        <attr name="resetColor1Title" format="string" />
+        <attr name="resetColor2Title" format="string" />
+        <attr name="alphaSliderVisible" format="boolean" />
+    </declare-styleable>
+
 </resources>
