--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -425,4 +425,62 @@
         <item>24</item>
     </string-array>
 
+    <!-- Color Picker -->
+    <array name="color_picker_favorite_color_buttons">
+        <item>@id/favorite_color_button_1</item>
+        <item>@id/favorite_color_button_2</item>
+        <item>@id/favorite_color_button_3</item>
+        <item>@id/favorite_color_button_4</item>
+    </array>
+
+    <array name="color_picker_palette_color_buttons_layouts">
+        <item>@id/color_buttons_bliss</item>
+        <item>@id/color_buttons_material</item>
+        <item>@id/color_buttons_rgb</item>
+    </array>
+
+    <array name="color_picker_palette_color_buttons">
+        <item>@id/palette_color_button_1</item>
+        <item>@id/palette_color_button_2</item>
+        <item>@id/palette_color_button_3</item>
+        <item>@id/palette_color_button_4</item>
+        <item>@id/palette_color_button_5</item>
+        <item>@id/palette_color_button_6</item>
+        <item>@id/palette_color_button_7</item>>
+        <item>@id/palette_color_button_8</item>
+    </array>
+
+    <array name="color_picker_bliss_palette">
+        <item>@color/black</item>
+        <item>@color/background_bliss_blue_grey</item>
+        <item>@color/holo_blue_light</item>
+        <item>@color/material_deep_teal_500</item>
+        <item>@color/white</item>
+        <item>@color/material_indigo_500</item>
+        <item>@color/material_red_500</item>>
+        <item>@color/material_purple_500</item>
+    </array>
+
+    <array name="color_picker_material_palette">
+        <item>@color/material_red_500</item>
+        <item>@color/material_green_500</item>
+        <item>@color/material_blue_500</item>
+        <item>@color/material_deep_teal_500</item>
+        <item>@color/material_indigo_500</item>
+        <item>@color/material_purple_500</item>
+        <item>@color/material_yellow_500</item>>
+        <item>@color/material_orange_500</item>
+    </array>
+
+    <array name="color_picker_rgb_palette">
+        <item>@color/black</item>
+        <item>@color/red</item>
+        <item>@color/green</item>
+        <item>@color/blue</item>
+        <item>@color/white</item>
+        <item>@color/purple</item>
+        <item>@color/yellow</item>>
+        <item>@color/orange</item>
+    </array>
+
 </resources>
