--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -33,4 +33,130 @@
     <!-- Shortcut picker -->
     <dimen name="shortcut_picker_left_padding">70dip</dimen>
 
+    <!-- Color picker -->
+    <!-- Width of the color picker color view drawable border -->
+    <dimen name="color_picker_color_view_drawable_border_width">1dp</dimen>
+
+    <!-- Preference -->
+
+    <!-- Width and height of the color picker preference preview -->
+    <dimen name="color_picker_preference_preview_width_height">33dp</dimen>
+
+    <!-- General -->
+
+    <!-- Size of the color picker buttons -->
+    <dimen name="color_picker_button_size">48dp</dimen>
+
+    <!-- Size of the color picker buttons drawable -->
+    <dimen name="color_picker_button_drawable_size">26dp</dimen>
+
+    <!-- Padding of the color picker buttons -->
+    <dimen name="color_picker_button_padding">11dp</dimen>
+
+    <!-- Action bar -->
+
+   <!-- Height of the action bar -->
+    <dimen name="color_picker_action_bar_height">56dp</dimen>
+
+    <!-- Width of the color picker apply color action -->
+    <dimen name="color_picker_action_apply_color_width">73dp</dimen>
+
+    <!-- End padding of the color picker apply color action -->
+    <dimen name="color_picker_action_apply_color_padding_end">4dp</dimen>
+
+    <!-- Horizontal translation of the color picker apply color action -->
+    <dimen name="color_picker_action_apply_color_translation_x">22dp</dimen>
+
+    <!-- Width of the color picker apply color set icon -->
+    <dimen name="color_picker_action_apply_color_set_width">29dp</dimen>
+
+    <!-- Bottom padding of the color picker apply color set icon -->
+    <dimen name="color_picker_action_apply_color_set_padding_bottom">19dp</dimen>
+
+    <!-- Start and end margin of the color picker edit hex action text -->
+    <dimen name="color_picker_action_edit_hex_margin_start_end">8dp</dimen>
+
+    <!-- Text size of the color picker edit hex action text -->
+    <dimen name="color_picker_action_edit_hex_text_size">16sp</dimen>
+
+    <!-- Fragment -->
+
+    <!-- Color picker view -->
+
+    <!-- Marging of the color picker view -->
+    <dimen name="color_picker_view_margin">8.5dp</dimen>
+
+    <!-- Color buttons -->
+
+    <!-- Top margin of the color picker color buttons scroll view -->
+    <dimen name="color_picker_color_buttons_scroll_view_margin_top">8dp</dimen>
+
+    <!-- Bottom padding of the color picker color buttons scroll view -->
+    <dimen name="color_picker_color_buttons_scroll_padding_bottom">16dp</dimen>
+
+    <!-- Fading edge lenght of the color picker color buttons scroll view -->
+    <dimen name="color_picker_color_buttons_scroll_view_fading_edge_lenght">12dp</dimen>
+
+    <!-- Bottom margin of the color picker color buttons layout  -->
+    <dimen name="color_picker_color_buttons_container_margin_bottom">8dp</dimen>
+
+    <!-- Top margin of the color picker color buttons second layout  -->
+    <dimen name="color_picker_color_buttons_second_layout_margin_top">8dp</dimen>
+
+    <!-- Start margin of the color picker buttons title -->
+    <dimen name="color_picker_color_buttons_title_margin_start">16dp</dimen>
+
+    <!-- Top margin of the color picker color buttons  -->
+    <dimen name="color_picker_color_buttons_layout_margin_top">4dp</dimen>
+
+    <!-- Start margin of the color picker color buttons layout  -->
+    <dimen name="color_picker_color_buttons_layout_margin_start">12dp</dimen>
+
+    <!-- End margin of the color picker color buttons layout  -->
+    <dimen name="color_picker_color_buttons_layout_margin_end">12dp</dimen>
+
+    <!-- Start and end margin of the color picker color buttons  -->
+    <dimen name="color_picker_color_button_margin_start_end">4dp</dimen>
+
+    <!-- Text size of the color picker color buttons title name  -->
+    <dimen name="color_picker_color_button_title_name_text_size">14sp</dimen>
+
+    <!-- Text size of the color picker color buttons value  -->
+    <dimen name="color_picker_color_button_value_text_size">10sp</dimen>
+
+    <!-- Help screen -->
+
+    <!-- Start margin of the color picker action bar title -->
+    <dimen name="color_picker_action_bar_title_margin_start">8dp</dimen>
+
+    <!-- Start and end padding of the color picker help screen -->
+    <dimen name="color_picker_help_screen_padding_start_end">16dp</dimen>
+
+    <!-- Top margin of the color picker help screen main title text -->
+    <dimen name="color_picker_help_screen_main_title_text_margin_top">16dp</dimen>
+
+    <!-- Top margin of the color picker help screen title text -->
+    <dimen name="color_picker_help_screen_title_margin_top">8dp</dimen>
+
+    <!-- Top margin of the color picker help screen secondary title text -->
+    <dimen name="color_picker_help_screen_secondary_title_margin_top">4dp</dimen>
+
+    <!-- Top margin of the color picker help screen summary text -->
+    <dimen name="color_picker_help_screen_summary_margin_top">4dp</dimen>
+
+    <!-- Top and bottom margin of the color picker help screen button bar -->
+    <dimen name="color_picker_help_screen_button_bar_margin_top_bottom">8dp</dimen>
+
+    <!-- Text size of the color picker help screen main title text -->
+    <dimen name="color_picker_help_screen_main_title_text_size">20sp</dimen>
+
+    <!-- Text size of the color picker help screen title text -->
+    <dimen name="color_picker_help_screen_title_text_size">16sp</dimen>
+
+    <!-- Text size of the color picker help screen secondary title text -->
+    <dimen name="color_picker_help_screen_secondary_title_text_size">12sp</dimen>
+
+    <!-- Text size of the color picker help screen summary text -->
+    <dimen name="color_picker_help_screen_summary_text_size">12sp</dimen>
+
 </resources>
