--- a/res/xml/statusbar_ticker.xml
+++ b/res/xml/statusbar_ticker.xml
@@ -25,7 +25,7 @@
         android:summary="@string/ticker_summary"
         android:defaultValue="false" />
 
-    <com.android.settings.zephyr.CustomSeekBarPreference
+    <com.android.settings.bliss.CustomSeekBarPreference
         android:key="status_bar_ticker_font_size"
         android:title="@string/ticker_font_size_title"
         android:defaultValue="14"
@@ -43,12 +43,12 @@
         android:key="ticker_colors"
         android:title="@string/colors_title">
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
+    <net.bliss.colorpicker.preference.ColorPickerPreference
         android:key="status_bar_ticker_text_color"
         android:title="@string/text_title"
         android:defaultValue="#ffffffff" />
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
+    <net.bliss.colorpicker.preference.ColorPickerPreference
         android:key="status_bar_ticker_icon_color"
         android:title="@string/icon_title"
         android:defaultValue="#ffffffff" />
