--- a/res/xml/toast_animation.xml
+++ b/res/xml/toast_animation.xml
@@ -18,4 +18,11 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/toast_animation_title">
 
+        <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:persistent="false" />
+
 </PreferenceScreen>
