Blissify: Add Notification Settings Category - Add Notification LED Tab
Change-Id: I4188571a7a44863f3aeead3b68a20b85a77a3a79
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -30,4 +30,9 @@
        android:fragment="com.blissroms.blissify.quicksettings.QuickSettings"
        android:title="@string/quick_settings_title" />
 
+    <PreferenceScreen
+       android:key="notification_settings"
+       android:fragment="com.blissroms.blissify.notification.NotificationSettings"
+       android:title="@string/notification_settings_title" />
+
 </PreferenceScreen>
