--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -24,4 +24,10 @@
         android:summary="@string/quick_settings_vibrate_summary"
         android:defaultValue="false"/>
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="qs_wifi_easy_toggle"
+        android:title="@string/qs_wifi_easy_toggle_title"
+        android:summary="@string/qs_wifi_easy_toggle_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
