--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -851,4 +851,11 @@
     <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
     <string name="pulse_ambient_light_color_title">Edge light color</string>
 
+    <!-- Hide Apps from Recents -->
+    <string name="hafr_category_title">HAFR</string>
+    <string name="hide_apps_from_recents_title">Hide apps from recents</string>
+    <string name="hide_apps_from_recents_summary">Prevent apps from appearing in recents</string>
+    <string name="hide_from_recents_add_app">Add app</string>
+    <string name="title_activity_carbon_recents_settings">Recents</string>
+
 </resources>
