--- a/res/xml/touch_gestures_tab.xml
+++ b/res/xml/touch_gestures_tab.xml
@@ -25,4 +25,10 @@
         android:summary="@string/double_tap_to_sleep_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+	android:key="three_finger_gesture"
+	android:title="@string/three_finger_gesture"
+	android:summary="@string/three_finger_gesture_summary"
+	android:defaultValue="false" />
+
 </PreferenceScreen>
