--- a/res/xml/navigation_bar.xml
+++ b/res/xml/navigation_bar.xml
@@ -18,4 +18,61 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/navigation_bar_title">
 
+    <SwitchPreference
+        android:key="navbar_visibility"
+        android:title="@string/navbar_visibility" />
+
+    <PreferenceCategory
+        android:key="category_navbar_interface"
+        android:title="@string/navbar_interface_title" >
+
+        <ListPreference
+            android:entries="@array/systemui_navbar_mode_entries"
+            android:entryValues="@array/systemui_navbar_mode_values"
+            android:key="navbar_mode"
+            android:title="@string/navbar_mode" />
+
+        <PreferenceScreen
+            android:key="smartbar_settings"
+            android:title="@string/smartbar_settings_title"
+            android:fragment="com.blissroms.blissify.button.tabs.SmartbarSettings" />
+
+        <PreferenceScreen
+            android:key="fling_settings"
+            android:title="@string/fling_settings"
+            android:fragment="com.blissroms.blissify.button.tabs.FlingSettings" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="category_navbar_general"
+        android:title="@string/navbar_general_title" >
+
+           <com.android.settings.bliss.CustomSeekBarPreference
+                android:key="navbar_height_portrait"
+                android:title="@string/portrait_title"
+                settings:max="135"
+                settings:min="65"
+                settings:units="%" />
+
+           <com.android.settings.bliss.CustomSeekBarPreference
+                android:key="navbar_height_landscape"
+                android:title="@string/land_hor_title"
+                settings:max="135"
+                settings:min="65"
+                settings:units="%" />
+
+           <com.android.settings.bliss.CustomSeekBarPreference
+                android:key="navbar_width"
+                android:title="@string/land_vert_title"
+                settings:max="135"
+                settings:min="65"
+                settings:units="%" />
+        <PreferenceScreen
+            android:key="pulse_settings"
+            android:title="@string/pulse_settings"
+            android:fragment="com.blissroms.blissify.button.tabs.PulseSettings" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
