Blissify: Add Power Settings Category
Change-Id: I010a9acfe750b26c16ce943713a6ff68c08eede6
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -49,4 +49,9 @@
        android:title="@string/button_settings_title"
        android:icon="@drawable/ic_bliss_button" />
 
+    <PreferenceScreen
+       android:key="power_settings"
+       android:fragment="com.blissroms.blissify.power.PowerSettings"
+       android:title="@string/power_settings_title" />
+
 </PreferenceScreen>
