Add volume rocker wake up device and music playback control
Big thanks to beanstown106 for original commit and strings

Change-Id: I1f18fb8321af5b5e89d62ab83abc91be172b8faa

--- a/res/xml/volume_buttons_tab.xml
+++ b/res/xml/volume_buttons_tab.xml
@@ -26,6 +26,17 @@
         android:entryValues="@array/volbtn_cursor_control_values"
         android:persistent="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="volume_wake_screen"
+        android:title="@string/volume_wake_screen_title"
+        android:summaryOn="@string/volume_wake_screen_summary_on"
+        android:summaryOff="@string/volume_wake_screen_summary_off"
+        android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="volbtn_music_controls"
+        android:title="@string/volbtn_music_controls_title"
+        android:summary="@string/volbtn_music_controls_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
