Add Quick Settings Pulldown options PureNexus edits: *Add Always quick pulldown options
Change-Id: Iec325ab91d525c04ddf69404741a18138e34df68

--- a/res/xml/touch_gestures_tab.xml
+++ b/res/xml/touch_gestures_tab.xml
@@ -25,10 +25,16 @@
         android:summary="@string/double_tap_to_sleep_summary"
         android:defaultValue="false" />
 
+    <ListPreference
+        android:key="quick_pulldown"
+        android:title="@string/quick_pulldown_title"
+        android:entries="@array/quick_pulldown_entries"
+        android:entryValues="@array/quick_pulldown_values" />
+
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-	android:key="three_finger_gesture"
-	android:title="@string/three_finger_gesture"
-	android:summary="@string/three_finger_gesture_summary"
-	android:defaultValue="false" />
+		android:key="three_finger_gesture"
+		android:title="@string/three_finger_gesture"
+		android:summary="@string/three_finger_gesture_summary"
+		android:defaultValue="false" />
 
 </PreferenceScreen>
