Add options to hide next alarm in status bar and lockscreen (2/2)
Change-Id: I90c8c4a009aa4f8ce4309ec48c2ea3690a6009e4

--- a/res/xml/lockscreen_tab.xml
+++ b/res/xml/lockscreen_tab.xml
@@ -25,4 +25,10 @@
         android:summaryOff="@string/left_default_voice_summary_off"
         android:defaultValue="true" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="show_next_alarm_lockscreen"
+        android:title="@string/show_next_alarm_lockscreen_title"
+        android:summary="@string/show_next_alarm_lockscreen_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
