--- a/res/xml/icons_tab.xml
+++ b/res/xml/icons_tab.xml
@@ -24,4 +24,10 @@
         android:summary="@string/status_bar_bluetooth_icon_summary"
         android:defaultValue="true" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="show_next_alarm_icon"
+        android:title="@string/show_next_alarm_icon_title"
+        android:summary="@string/show_next_alarm_icon_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
