lights: Automatically generate an LED color for notifications - Add missing imports Change-Id: If9ac634451bc13ef515a4ff29ba42c53f10cf999

--- a/res/xml/notification_light.xml
+++ b/res/xml/notification_light.xml
@@ -25,6 +25,13 @@
             android:key="notification_light_pulse"
             android:title="@string/notification_light_title" />
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="notification_light_color_auto"
+            android:title="@string/notification_light_automagic"
+            android:summary="@string/notification_light_automagic_summary"
+            android:dependency="notification_light_pulse"
+            android:defaultValue="true" />
+
         <com.blissroms.blissify.notification.NotificationLightPreference
             android:key="default"
             android:title="@string/notification_light_default_value"
