Blissify: Add Button Settings - Add Navigation Button Tab - Add Navigation Bar Tab
Change-Id: I2775e71b07ed44ddf127c6279efe8a3585aeca6e
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -115,6 +115,7 @@
         <item>1000</item>
         <item>2000</item>
         <item>5000</item>
+    </string-array>
 
     <!-- Clock & Date options -->
     <string-array name="clock_style_entries" translatable="false">
@@ -195,7 +196,6 @@
         <item>EEEE dd/MM</item>
         <item>EEEE MM/dd</item>
         <item>@string/clock_date_format_custom</item>
-
     </string-array>
 
 </resources>
