Make QS columns count configurable [2/2]
Adjusted @maxwen's commit found here http://gerrit.dirtyunicorns.com/#/c/2861/ so
needed this commit to bring everything together

Change-Id: I2a01548164d3232df645191a4e985d48ccc81f8d

--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -88,10 +88,12 @@
         android:entries="@array/qs_rows_landscape_entries"
         android:entryValues="@array/qs_rows_landscape_values" />
 
-    <ListPreference
-        android:key="qs_columns"
+    <com.android.settings.bliss.CustomSeekBarPreference
+        android:key="qs_layout_columns"
         android:title="@string/qs_columns_title"
-        android:entries="@array/qs_columns_entries"
-        android:entryValues="@array/qs_columns_values" />
+        settings:max="7"
+        settings:min="1"
+        settings:units=""
+        android:persistent="false" />
 
 </PreferenceScreen>
