Repurpose SystemUI tuner for Blissify [2/2] *launch statusbar icon blacklist *launch navbar tuner *launch power notification controls
Hide Navbar tuner

*Smartbar pretty much does a better job

Change-Id: Idec0fbc3694a17e2ab31543bdbe5135393b4ea9a

--- a/res/xml/navigation_bar.xml
+++ b/res/xml/navigation_bar.xml
@@ -75,4 +75,12 @@
 
     </PreferenceCategory>
 
+    <!-- PreferenceScreen
+        android:title="@string/navbar_tuner_title"
+        android:summary="@string/navbar_tuner_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.NavbarActivity" />
+    </PreferenceScreen> -->
+
 </PreferenceScreen>
