--- a/res/xml/notification_light.xml
+++ b/res/xml/notification_light.xml
@@ -68,4 +68,12 @@
         android:dependency="notification_light_pulse_custom_enable" >
     </PreferenceCategory>
 
+    <PreferenceScreen
+            android:title="@string/power_notification_title"
+            android:summary="@string/power_notification_summary">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.PowerNotificationControlsActivity" />
+    </PreferenceScreen>
+
 </PreferenceScreen>
