QS tile titles visibility [2/2]
- Increase the columns to 9
- Disable music tile title switch if this is enabled, no need for it

Change-Id: I1ee104d565d86fd0047cb1f1793ff1ecfbcb8571

--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -33,6 +33,13 @@
         android:dependency="qs_show_brightness"
         android:defaultValue="true"/>
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="qs_tile_title_visibility"
+        android:title="@string/qs_tile_title_visibility_title"
+        android:summaryOn="@string/qs_tile_title_visibility_summary_on"
+        android:summaryOff="@string/qs_tile_title_visibility_summary_off"
+        android:defaultValue="true"/>
+
     <com.blissroms.blissify.preference.SecureSettingSwitchPreference
         android:key="quick_settings_vibrate"
         android:title="@string/quick_settings_vibrate_title"
