Option to disable music track title in QS tile [2/2]
Change-Id: I144b64457b2c0cdaabc2f1b8bdbd3d8aec076257

--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -43,4 +43,10 @@
         android:summary="@string/qs_advanced_data_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="music_tile_title"
+        android:title="@string/qs_music_tile_track_optional_title"
+        android:summary="@string/qs_music_tile_track_optional_summary"
+        android:defaultValue="false"/>
+
 </PreferenceScreen>
