QS Header Date+Time positions [2/2]
Adds option to center date+time group

Change-Id: Ibf547d426b43ccc07fbbab4347fe389ecc861612
Signed-off-by: Joe Maples <joe@frap129.org>

--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -127,4 +127,10 @@
         settings:units=""
         android:persistent="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="qs_date_time_center"
+        android:title="@string/qs_date_time_center_title"
+        android:summary="@string/qs_date_time_center_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
