[1/2] Settings: show charging current & voltage on lockscreen
Thanx to ezio84 for the switch ;)

Change-Id: I262c6c7fd7cfd3a2f0ea9cf1122310710ddabffd
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/lockscreen_tweaks.xml
+++ b/res/xml/lockscreen_tweaks.xml
@@ -19,4 +19,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/lockscreen_tweaks_title">
 
+     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+         android:key="lockscreen_charging_current"
+         android:title="@string/lockscreen_charging_current_title"
+         android:summary="@string/lockscreen_charging_current_summary"
+         android:defaultValue="false" />
+
 </PreferenceScreen>
