[1/2] Settings: show more battery info on lockscreen when charging
- negociated max. charging current
- negociated max. charging voltage
- current battery temperature

Change-Id: Id0c40ec6381d89914ea7f0066cd7a3a602a3e2aa
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/lockscreen_tweaks.xml
+++ b/res/xml/lockscreen_tweaks.xml
@@ -20,9 +20,9 @@
     android:title="@string/lockscreen_tweaks_title">
 
      <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-         android:key="lockscreen_charging_current"
-         android:title="@string/lockscreen_charging_current_title"
-         android:summary="@string/lockscreen_charging_current_summary"
+         android:key="lockscreen_battery_info"
+         android:title="@string/lockscreen_battery_info_title"
+         android:summary="@string/lockscreen_battery_info_summary"
          android:defaultValue="false" />
 
 </PreferenceScreen>
