Battery Saver Easy Toggle [2/2]
Change-Id: Ic3b9723abf99ff8f603db1b8b5d4ba1af8c5cc87
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/xml/qs_advanced.xml
+++ b/res/xml/qs_advanced.xml
@@ -49,4 +49,10 @@
         android:summary="@string/qs_music_tile_track_optional_summary"
         android:defaultValue="false"/>
 
+    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+        android:key="qs_battery_easy_toggle"
+        android:title="@string/qs_battery_easy_toggle_title"
+        android:summary="@string/qs_battery_easy_toggle_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
