CAF Task Manager Switch [2/2]
Change-Id: Ie26e432a8121bea54737380f4606dabb4a246b23
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/xml/task_manager.xml
+++ b/res/xml/task_manager.xml
@@ -18,4 +18,9 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/task_manager_title">
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="enable_task_manager"
+        android:title="@string/task_manager_title"
+        android:summary="@string/enable_task_manager_summary" />
+
 </PreferenceScreen>
