Blissify: Task Manager Customizations [2/2]
Change-Id: Id97bb48b4641a09ed211dc2b3f4997993265cf12
Signed-off-by: Varun Date <date.varun123@gmail.com>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/task_manager.xml
+++ b/res/xml/task_manager.xml
@@ -23,4 +23,25 @@
         android:title="@string/task_manager_title"
         android:summary="@string/enable_task_manager_summary" />
 
+         <ListPreference
+            android:key="task_manager_kill_button"
+            android:title="@string/task_manager_kill_button"
+            android:entries="@array/task_manager_kill_button_entries"
+            android:entryValues="@array/task_manager_kill_button_values"
+            android:dependency="enable_task_manager" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="task_manager_left_button"
+            android:title="@string/task_manager_left_button_title"
+            android:summary="@string/task_manager_left_button_summary"
+            android:defaultValue="true"
+            android:dependency="enable_task_manager" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="task_manager_right_button"
+            android:title="@string/task_manager_right_button_title"
+            android:summary="@string/task_manager_right_button_summary"
+            android:defaultValue="true" 
+            android:dependency="enable_task_manager" />
+
 </PreferenceScreen>
