--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -502,4 +502,19 @@
         <item>30000</item>
     </string-array>
 
+    <!-- Task manager -->
+    <string-array name="task_manager_kill_button_entries" translatable="false">
+        <item>@string/task_manager_kill_button_default</item>
+        <item>@string/task_manager_kill_button_1</item>
+        <item>@string/task_manager_kill_button_2</item>
+        <item>@string/task_manager_kill_button_3</item>
+    </string-array>
+
+    <string-array name="task_manager_kill_button_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 </resources>
