Backlight:Remove Hardware keys dependency
Signed-off-by: starkdroid <gamerprince.exp@gmail.com>

--- a/res/xml/nav_button.xml
+++ b/res/xml/nav_button.xml
@@ -32,7 +32,6 @@
             android:max="255"
             settings:min="0"
             settings:units=""
-            android:dependency="hardware_keys_disable"
             android:persistent="false" />
 
     <ListPreference
@@ -41,8 +40,7 @@
         android:entryValues="@array/backlight_timeout_values"
         android:key="backlight_timeout"
         android:persistent="false"
-        android:title="@string/backlight_timeout_title" 
-        android:dependency="hardware_keys_disable" />
+        android:title="@string/backlight_timeout_title" />
 
 </PreferenceCategory>
 
