Blissify: Powermenu Torch option [2/2]
Thanks to Alex Cruz for bringing it to MM

AICP brought it to N and CM base

Change-Id: Ib3e6050a517f23f34f9b8f6c6fb1b5f53be3d9cc

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -343,6 +343,7 @@
         <item>lockdown</item>
         <item>assist</item>
         <item>voiceassist</item>
+        <item>torch</item>
         <item>silent</item>
     </string-array>
 
