--- a/res/xml/power_menu.xml
+++ b/res/xml/power_menu.xml
@@ -68,6 +68,11 @@
         android:defaultValue="false" />
 
     <SwitchPreference
+        android:key="torch"
+        android:title="@string/power_menu_torch_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
         android:key="silent"
         android:title="@string/power_menu_sound_title"
         android:defaultValue="false" />
