Pulse:Moar bars for solid line renderer [3/3]
Change-Id: I8960bc5065a35852e0e97b18ba88ba8f3f206d93

--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -119,6 +119,14 @@
 	<PreferenceCategory
         android:key="pulse_2"
         android:title="@string/pulse_solid_dimen_category" >
+				
+        <com.android.settings.bliss.CustomSeekBarPreference
+            android:key="pulse_solid_units_count"
+            android:title="@string/pulse_solid_units_count"
+            settings:max="128"
+            settings:interval="16"
+            settings:min="32"
+            android:dependency="pulse_2"/>
 
         <com.android.settings.bliss.CustomSeekBarPreference
             android:key="pulse_solid_fudge_factor"
