Blissify: config to hide status bar on lock screen [2/2]
Change-Id: I21bb217a3c11962f090d9af461a83ddad0a2a4ef

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -707,4 +707,8 @@
     <string name="less_boring_heads_up_title">Less boring heads up</string>
     <string name="less_boring_heads_up_summary">Show heads up only for dialer, messaging and alarm app</string>
 
+    <!-- Hide Statusbar on Lockscreen -->
+    <string name="lockscreen_hide_status_bar_title">Hide status bar</string>
+    <string name="lockscreen_hide_status_bar_summary">Touch status bar to toggle visibility</string>
+
 </resources>
