--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -29,4 +29,11 @@
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/>
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="roaming_indicator_icon"
+            android:icon="@drawable/ic_roaming_indicator"
+            android:title="@string/roaming_indicator_icon_title"
+            android:summary="@string/roaming_indicator_icon_summary"
+            android:defaultValue="true"/>
+
 </PreferenceScreen>
