Blissify: Add Blissify Tweaks Category - Cleanup Strings ( We all know its settings no need to specify it again!)
Icon credits: westcripp

Change-Id: Ie8de2877c978a8fd6376f0a20a26a80647a9a2fb
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -67,4 +67,10 @@
        android:title="@string/recents_settings_title"
        android:icon="@drawable/ic_bliss_recents" />
 
+    <PreferenceScreen
+       android:key="advanced_settings"
+       android:fragment="com.blissroms.blissify.advanced.BlissifyTweaks"
+       android:title="@string/advanced_settings_title"
+       android:icon="@drawable/ic_bliss_advanced" />
+
 </PreferenceScreen>
