Blissify: Add icon for Button Settings
Taken from Blissify: Add Button Settings
- Add Navigation Button Tab
- Add Navigation Bar Tab

Change-Id: I2775e71b07ed44ddf127c6279efe8a3585aeca6e
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -46,7 +46,8 @@
     <PreferenceScreen
        android:key="buttons_settings"
        android:fragment="com.blissroms.blissify.buttons.ButtonSettings"
-       android:title="@string/buttons_settings_title" />
+       android:title="@string/buttons_settings_title"
+       android:icon="@drawable/ic_bliss_button"  />
 
     <PreferenceScreen
        android:key="animation_settings"
